[package]
name = "clon_tw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
diesel = { version = "2.0.0", features = ["postgres","r2d2"] }
dotenvy = "0.15"
uuid = {version = "1.2.2", features = ["v4"]}
chrono = "0.4.23"