[package]
name = "clon_tw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
diesel = { version = "2.0.0", features = ["postgres","r2d2","uuid","chrono"] }
dotenvy = "0.15"
uuid = {version = "1.2.2", features = ["serde", "v4"]}
chrono = {version = "0.4.23", features = ["serde"]}
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
env_logger = "0.10.0"